fix: subpanel fields spacing module styling

--- a/docker/advocase-image/build-files/suitecrm/public/legacy/themes/suite8/css/suitep-base/aor.scss
+++ b/docker/advocase-image/build-files/suitecrm/public/legacy/themes/suite8/css/suitep-base/aor.scss
@@ -64,6 +64,7 @@
   padding: 0 0 16px !important;
   border-bottom: none !important;
   margin: 0 !important;
+  color: $primary_text;
 }
 
 #report-editview-footer .tab-toggler.active .button {
